--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ui5/webcomponents": "^2.2.0",
+    "@ui5/webcomponents-fiori": "^2.2.0",
     "@ui5/webcomponents-icons": "^2.2.0",
     "@ui5/webcomponents-react": "^2.1.0",
     "axios": "^1.7.7",
@@ -16,7 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " npm install && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
