--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@ui5/webcomponents-fiori": "^2.2.0",
     "@ui5/webcomponents-icons": "^2.2.0",
     "@ui5/webcomponents-react": "^2.1.0",
+    "@ui5/webcomponents-react-compat": "^2.1.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
